# small-webrtc-prebuilt

./: .gitignore  .prettierrc  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client-new/: index.html  vite.config.js
client-new/src/: style.css  voice-visualizer.ts
client/src/: app.js  app.ts  index.tsx  style.css  voice-visualizer.js  voice-visualizer.ts
example/: main.py
pipecat_ai_small_webrtc_prebuilt/: frontend.py
scripts/: clear.sh  prepare_dist.sh
small_webrtc_prebuilt/: frontend.py
test/: README.md  app.py  bot-image.py  bot.py  env.example  requirements.txt  run.py
