[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "small-webrtc-prebuilt"
version = "0.0.2"
description = "A simple, ready-to-use client for testing the SmallWebRTCTransport."
license = { text = "BSD 2-Clause License" }
readme = "README.md"

[project.urls]
"Home" = "https://github.com/pipecat-ai/small-webrtc-prebuilt"

