[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipecat-ai-small-webrtc-prebuilt"
version = "0.6.3"
description = "A simple, ready-to-use client for testing the SmallWebRTCTransport."
license = { text = "BSD 2-Clause License" }
readme = "README.md"

# List your package dependencies
dependencies = [
    "fastapi[all]",  # Required at runtime
]

[project.urls]
"Home" = "https://github.com/pipecat-ai/small-webrtc-prebuilt"

